
ATTENTION! The hydrus driver could report the wrong value for total_at_date_m3
if an at_date had not been reached yet. This is fixed.

Added initial support for drivers that can be loaded from config files.
Properly receive telegrams from amb8465 which is in command mode.
Chris Bednarczyk improved the build process for Darwin/MacOS platform. Thanks Chris!
PovilasID added another Hydrodigit version. Thanks PovilasID!
Added new units for phase angle: deg rad.
Added more fields to the abbb23.

Version 1.14.0 2023-07-02
Version 1.14.0-RC1 2023-07-02

Added more fields to em24 driver.
Added another mfct/type/version combo to em42 driver and the power_kw field.

Mikołaj Milej imporved the installation script! Thanks Mikołaj!
Christian Güdel improved the topaseskr driver to consider negative flows. Thanks Christian!
Peter Vágner improved the lansenth driver to consider negative temperatures. Thanks Peter!
Dennis Metz improved the ultraheat driver to consider negative flow and temperatures. Thanks Dennis!
Bibo added support for the hcae2 driver. Thanks Bibo!

Improve error messages when telegrams with bad length byte are read.
Improve the apator162 driver.

Added the iwmtx5 driver.

Vyacheslav Karpukhin improved the qheat driver to decode proprietary format telegrams. Thanks Vyacheslav!

pvagner improved the lansenth driver to handle negative values. Thanks pvagner!

demetz imporproved ultraheat driver to handle negative values. Thanks demetz!

Version 1.13.1 2023-05-07
Version 1.13.1-RC1 2023-05-07

Fix make install to not trigger a new build.

Version 1.13.0 2023-05-07
Version 1.13.0-RC1 2023-05-07

The ha-addon has been moved to https://github.com/wmbusmeters/wmbusmeters-ha-addon

Bug fixed where an mbus telegram was mistakenly detected as wmbus.
The snap package can now use the serial port so that it works with mbus.

DeDragonSlayer improved the amiplus with the maximum power consumption field. Thanks DeDragonSlayer!
