@@ -1,4 +1,11 @@
 
+Pim added a --metershell setting which will invoke a shell command line
+when a meter is seen for the first time. This can be used to trigger extra
+commands in HA and other systems, to add the new meter. Thanks Pim!
+
+Pim added support for the Lansen repeater which sends its own status messages!
+Thanks Pim!
+
 ATTENTION! The hydrus driver could report the wrong value for total_at_date_m3
 if an at_date had not been reached yet. This is fixed.
 
